[package]
name = "symmetrical-spork"
version = "0.1.1"
edition = "2021"
description = "Ignore me, just for testing"
license = "MIT"
documentation = "https://docs.rs/symmetrical-spork"
homepage = "https://github.com/scouten/symmetrical-spork"
repository = "https://github.com/scouten/symmetrical-spork"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
one = []
two = []
